tests/invalid/type/variadic_mutation_forbidden.pts
prototype Q {
    function f(list<int> xs...) : void {
        xs.push(4);
    }
}

function main() : void {
}
